ChangeLog
=========


current: quickly-0.0.7

- Element.copy_with_origin now works properly everywhere
- Node.equals() now works for TextElement, by implementing body_equals()
- improvements to TextElement, optional head value checking
- renamed lily.PropToggle to Toggle
- fixed escape warnings in source files
- added duration.shift_duration()
- moved scm.Int to scm.Number in some forgotten places


2021-02-16: quickly-0.0.6

- required parce version 0.22.0
- lily.Header, lily.Paper and lily.Layout now have easy to use properties to
  set variables like title, composer, etc.
- lily.Document now has version attribute to read/set LilyPond version
- added markup construction helper in quickly.dom.markup
- Scheme transform handles all Scheme number features, e.g. #xb/f (a fraction
  in hex) and even complex numbers


2021-02-11: quickly-0.0.5

- Milestone: quickly correctly parses my Mouvement piece!
  https://github.com/wbsoft/lilymusic/blob/master/berendsen/mouvement.ly
- fixed \rest before duration
- fixed dot missing in scheme pair
- add space after markup commands
- fixed dom.element.build_tree, it lost a node after two \repeat nodes
- parce removed identifier context; we only create Identifier with Assignment
- smartly support \tag and \tweak without direction prepended
- fixed documentation build errors.


2021-02-07: quickly-0.0.4

- still pre-alpha but work in progress
- quickly.dom.lily now has much more elements
- correctly parse lists, property paths etc
- added chordmode and chord modifiers, figuremode
- quickly.lang.lilypond now transforms almost a full document
- commands are combined with their arguments, based on signatures
- work started on documentation with a quickly.dom explanation


2021-01-31: quickly-0.0.3

- still pre-alpha
- much more robust already
- dom.element now has the four basic Element node types
- dom.element can be constructed manually or via LilyPondTransform
- writing back to document works
- scheme expressions are fully read/built