@@ -2,7 +2,7 @@ Overview of all modules
 =======================
 
 .. toctree::
-   :maxdepth: 2
+   :maxdepth: 3
 
    dom.rst
    duration.rst
